fix offline indecator

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,14 @@
 			content="Quantflow trading terminal demo with realtime market data mocks"
 		/>
 		<meta name="theme-color" content="#00d395" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta
+			name="apple-mobile-web-app-status-bar-style"
+			content="black-translucent"
+		/>
+		<meta name="apple-mobile-web-app-title" content="Quantflow" />
 		<link rel="manifest" href="/manifest.json" />
+		<link rel="apple-touch-icon" href="/icons/quantflow-192.svg" />
 		<title>Quantflow Terminal</title>
 	</head>
 	<body>
